# pagsuite

./: CMakeLists.txt  PagSuiteConfig.cmake  README.md
branches/liberate/: CMakeLists.txt  PagSuiteConfig.cmake
branches/liberate/opag/inc/: opag.h
branches/liberate/opag/src/: adder_depth.cpp
branches/liberate/pag_fusion/: CMakeLists.txt
branches/liberate/pag_fusion/doc/: ternary_2state.txt
branches/liberate/pag_fusion/inc/: mt_graph_types.h  mt_limits.h  mt_matree2.h  mt_matree_placement_heap.h  mt_matrix_calc.h  mt_types.h  simple_math.h
branches/liberate/pag_fusion/src/: cmd_param_helper.cpp  mt_decision_node.cpp  mt_matree2.cpp  mt_merger_construction.cpp  mt_merger_input_related.cpp  mt_merger_misc.cpp  mt_merger_solving.cpp  mt_merger_solving_cost.cpp
branches/liberate/pag_lib/: CMakeLists.txt
branches/liberate/pag_lib/paglib_copa/: CMakeLists.txt
branches/liberate/pag_lib/paglib_test/: CMakeLists.txt  main.cpp
branches/liberate/pag_split/: CMakeLists.txt
branches/liberate/pag_split/inc/: pag_splitter.h
branches/liberate/pag_split/src/: main.cpp
branches/liberate/rpag/: CMakeLists.txt
branches/liberate/rpag/inc/: debug.h  rpag.h  rpag_base.h  rpagvm.h
branches/liberate/rpag/librpag/: CMakeLists.txt
branches/liberate/rpag/matlab/: rpag_benchmark_latex_output.m
branches/liberate/rpag/rpag/: CMakeLists.txt
branches/liberate/rpag/src/: fundamental.cpp  rpag.cpp  rpag_functions.cpp  rpagt.cpp  tic_toc.cpp
omcm/: CMakeLists.txt  omcm.cpp
oscm/: CMakeLists.txt  oscm.cpp
oscm/inc/: scmopt.hpp
oscm/inc/pagsuite/: oscm.hpp  scm_solutions.hpp
oscm/src/: pagexponents.cpp
pag_lib/paglib_copa/: CMakeLists.txt
pag_lib/paglib_copa/inc/: adder_graph.h  paglib_copa.h
pag_lib/paglib_copa/src/: adder_graph.cpp  paglib_copa.cpp
paglib/: CMakeLists.txt
paglib/inc/pagsuite/: adder_graph.h
paglib/src/: adder_graph.cpp  adder_graph.h  vector_util.cpp
rpag/: CMakeLists.txt
rpag/inc/: compute_successor_set.h  cost_model.h  debug.h  log2_64.h  main.h  norm.h  rpag_base.h  rpag_functions.h  rpag_matrix_decomp.h  rpag_pointer.h  rpag_topologies.h  rpagt.h  rpagtvm.h  tic_toc.h  types.h
rpag/inc/pagsuite/: cost_model.h  debug.h  fundamental.h  norm.h  rpag_base.h  rpag_vec.h  rpagvm.h
rpag/librpag/: CMakeLists.txt
rpag/librpag/inc/: abstraction_time.h  cost_model.h  debug.h  fundamental.h  log2_64.h  norm.h  rpag_base.h  rpag_vec.h  rpagt.h  rpagtvm.h  rpagvm.h  triplet.h  type_class.h
rpag/librpag/src/: compute_successor_set.cpp  cost_model.cpp  fundamental.cpp  rpag.cpp  rpag_base.cpp  rpag_functions.cpp  rpag_topologies.cpp  rpagt.cpp  rpagvm.cpp
rpag/matlab/: h_cub_min_ld_benchmark.m  rpag_benchmark.m  rpag_benchmark_console.m
rpag/matlab/doc/: rpag.html
rpag/matlab/helper_functions/: add_output_coeff.m  adder_depth_mat.m  analyze_pipelined_realization.m  analyze_pipelined_realization_from_file.m  analyze_realization.m  compute_realization.m  icost_aksoy.m  is_member_of.m  mat2dtsyn.m  norm_vec.m  plot_pipelined_realization_graph.m  remove_redundant_pipelined_realizations.m  run_rpag_cmm.m  run_rpag_cmm_decomposition.m  validate_cmm_realization.m  validate_pipelined_realization.m  write_cmm_pipelined_realization_graph_dot.m
rpag/matlab/icost/: file_read_theirmcm.m  fir04_ilp.result  fir05.coef  fir05_ilp.result  mcm_em_vhdl.m  subtractor_type_three.m
rpag/matlab/misc/: find_all_predecessor_pairs.m  pair_search_test.m
rpag/matlab/misc/common_algorithms/: numberdata2_20.mat  scm_cost_20.mat
rpag/matlab/results/: results_hl_fpga_50.mat
rpag/matlab/rpag/: rpag.m  rpag_find_best_predecessor_pair.m
rpag/rpag/: CMakeLists.txt
rpag/rpag/src/: main.cpp
rpag/src/: csd.cpp  debug.cpp  log2_64.cpp  main.cpp  norm.cpp  rpag.cpp  rpag_base.cpp  rpag_functions.cpp  rpag_matrix_decomp.cpp  rpag_pointer.cpp  rpag_topologies.cpp  rpagt.cpp  rpagtvm.cpp  rpagvm.cpp  tic_toc.cpp
trunk/oscm/: CMakeLists.txt  oscm.cpp
trunk/oscm/inc/: pagexponents.hpp  scm_solutions.hpp
trunk/oscm/inc/pagsuite/: pagexponents.hpp
trunk/oscm/src/: main.cpp  oscm.cpp  pagexponents.cpp  scmopt.cpp
trunk/pag_fusion/: CMakeLists.txt
trunk/pag_fusion/inc/: abstraction_time.h  logging.h  mt_cost_functions.h  mt_debug.h  mt_decision_node.h  mt_graph_types.h  mt_graph_types_construct.h  mt_headers.h  mt_merger.h  mt_options.h  mt_tree_printer.h
trunk/pag_fusion/src/: main.cpp  mt_graph_types.cpp  mt_merger.cpp  mt_merger_input_related.cpp  mt_merger_solving.cpp  mt_merger_solving_cost.cpp  mt_tree_printer.cpp  simple_math.cpp
trunk/pag_fusion/src/parsers/: inputparser.cpp
trunk/pag_lib/: CMakeLists.txt
trunk/pag_lib/paglib_copa/: CMakeLists.txt
trunk/pag_lib/paglib_copa/inc/: adder_graph.h
trunk/pag_lib/paglib_copa/src/: adder_graph.cpp  paglib_scopes.cpp
trunk/pag_lib/paglib_test/: CMakeLists.txt
trunk/pag_split/: CMakeLists.txt
trunk/pag_split/src/: pag_splitter.cpp
trunk/rpag/: CMakeLists.txt
trunk/rpag/inc/: configurable.h  cost_model.h  csd.h  debug.h  fundamental.h  rpag.h  rpag_base.h  rpag_functions.h  rpag_pointer.h  rpag_topologies.h  rpagt.h  rpagvm.h  type_class.h
trunk/rpag/inc/pagsuite/: abstraction_time.h  compute_successor_set.h  configurable.h  csd.h  log2_64.h  rpag.h  rpag_base.h  rpag_functions.h  rpag_matrix_decomp.h  rpag_pointer.h  rpag_topologies.h  rpagt.h  rpagtvm.h  tic_toc.h  triplet.h  type_class.h  types.h
trunk/rpag/matlab/: make_doc.m  rpag_benchmark_console.m  run_rpag_cmm.m
trunk/rpag/matlab/helper_functions/: add_sub_ll_components.m  adder_depth.m  adder_depth_cached_prepare.m  adder_depth_vec.m  analyze_pipelined_realization_fanout.m  analyze_pipelined_realization_from_file.m  benchmarkfilter2d.m  cell2str.m  compute_exponents.m  compute_exponents_3add.m  (+23 more)
trunk/rpag/src/: compute_successor_set.cpp  cost_model.cpp  fundamental.cpp  main.cpp  norm.cpp  rpag_base.cpp  rpag_functions.cpp  rpag_matrix_decomp.cpp  rpag_pointer.cpp  rpagt.cpp  rpagtvm.cpp  rpagvm.cpp
trunk/scm_opt/: CMakeLists.txt
trunk/scm_opt/inc/: fundamental_extended.hpp  pagexponents.hpp
trunk/scm_opt/src/: main.cpp
(+168 files in other folders)
