cmake_minimum_required(VERSION 2.8)
project(pag_tools CXX)

if (CMAKE_BUILD_TYPE STREQUAL "debug")
	message( "Now building in debug mode")
else (CMAKE_BUILD_TYPE STREQUAL "debug")
	message( "Now building in release mode")
	SET ( CMAKE_BUILD_TYPE "release" )
endif (CMAKE_BUILD_TYPE STREQUAL "debug")

if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
    SET( BITNESS 64 )
else( CMAKE_SIZEOF_VOID_P EQUAL 8 )
    SET( BITNESS 32 )
endif()

IF( UNIX )
    SET( SYSTEM_PREFIX "lin" )
elseif( MINGW )
    SET( SYSTEM_PREFIX "win" )
elseif( APPLE )
    SET( SYSTEM_PREFIX "mac" )
else()
    message( FATAL_ERROR "No supported system found, CMake will exit." )
endif()
SET( SYSTEM_NAME ${SYSTEM_PREFIX}${BITNESS} )

#add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/../pag_lib ./CMakeTmp/pag_lib)
#set_target_properties(paglib_test PROPERTIES OUTPUT_NAME pag_print)

add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/pag_fusion ./CMakeTmp/pag_fusion)
add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/pag_split ./CMakeTmp/pag_split)

IF( BUILD_FLOPOCO )
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/${SYSTEM_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/${SYSTEM_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
add_subdirectory( ${BUILD_FLOPOCO} ./CMakeTmp/flopoco)
ENDIF()
