cmake_minimum_required(VERSION 2.8)
project(paglib)

set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -fPIC")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/inc )

SET(SRC_FILES 
  ${CMAKE_CURRENT_SOURCE_DIR}/src/adder_graph.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vector_util.cpp
)

SET(HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/pagsuite/adder_graph.h
)

ADD_LIBRARY(paglib SHARED ${SRC_FILES} ${HEADERS})

set_target_properties(paglib PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(paglib PROPERTIES OUTPUT_NAME "pag")

SET_TARGET_PROPERTIES(
paglib
PROPERTIES
	SOVERSION 0
	VERSION 2.1.0
)

INSTALL(FILES ${HEADERS}
    DESTINATION include/pagsuite
)

INSTALL(TARGETS paglib
  RUNTIME DESTINATION lib
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)

