PROJECT( pag_fusion CXX )

SET( PAGSUITE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/.. )

include(${PAGSUITE_ROOT_DIR}/PagSuiteConfig.cmake)
configure()
include_copa( ${PAGSUITE_ROOT_DIR} )
include_paglib( ${PAGSUITE_ROOT_DIR} )

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
FILE( GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE( GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h)

ADD_EXECUTABLE( pag_fusion ${SOURCES} ${HEADERS})

set_target_properties( pag_fusion PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES( pag_fusion pag_lib_static ${COPA_STATIC} )
IF( ${SYSTEM_PREFIX} STREQUAL "lin" )
	TARGET_LINK_LIBRARIES( pag_fusion rt )
ENDIF()

INSTALL(TARGETS pag_fusion
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
